# flow

./: Makefile
crates/activate/src/: lib.rs
crates/activate/src/snapshots/: activate__test__ops_collection_partition.snap  activate__test__partition_splits.snap  activate__test__shard_splits.snap  activate__test__update-disabled.snap
crates/agent/src/: main.rs
crates/agent/src/api/: authorize_task.rs  mod.rs  notify_shard_failure.rs
crates/agent/src/integration_tests/: harness.rs  source_captures.rs  unknown_connectors.rs
crates/assemble/src/: lib.rs
crates/assemble/src/snapshots/: assemble__test__inference.snap
crates/billing-integrations/src/: stripe.rs
crates/derive-typescript/: Cargo.toml
crates/doc/src/shape/: widen.rs
crates/json/src/: number.rs
crates/models/src/: authorizations.rs
crates/proto-flow/tests/: regression.rs
crates/proto-flow/tests/snapshots/: regression__capture_request_json.snap  regression__capture_request_proto.snap  regression__capture_spec_json.snap  regression__capture_spec_proto.snap  regression__collection_spec_json.snap  regression__collection_spec_proto.snap  regression__derivation_spec_json.snap  regression__derivation_spec_proto.snap  regression__derive_request_json.snap  (+5 more)
crates/proto-gazette/src/: protocol.rs  protocol.serde.rs
go/flow/: converge.go  mapping.go  mapping_test.go
go/runtime/: capture.go  connector_proxy.go  derive.go  flow_consumer.go  task.go  task_test.go
site/docs/guides/: howto_join_two_collections_typescript.md
supabase/migrations/: 00_polyfill.sql  20240930_compacted.sql
(+13 files in other folders)
