[package]
name = "derive-typescript"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "derive-typescript"
path = "src/main.rs"

[dependencies]
doc = { git = "https://github.com/estuary/flow", rev = "d1e98bb3300d0d46e1d98894f3c55bbda3407a29" }
json = { git = "https://github.com/estuary/flow", rev = "d1e98bb3300d0d46e1d98894f3c55bbda3407a29" }
proto-flow = { git = "https://github.com/estuary/flow", rev = "d1e98bb3300d0d46e1d98894f3c55bbda3407a29" }

anyhow = "1"
itertools = "0.11"
lazy_static = "1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "time",
    "json",
    "env-filter",
    "fmt",
] }
url = "2"

[dev-dependencies]
models = { git = "https://github.com/estuary/flow", rev = "d1e98bb3300d0d46e1d98894f3c55bbda3407a29" }
sources = { git = "https://github.com/estuary/flow", rev = "d1e98bb3300d0d46e1d98894f3c55bbda3407a29" }
tables = { git = "https://github.com/estuary/flow", rev = "d1e98bb3300d0d46e1d98894f3c55bbda3407a29" }

insta = "1"
serde_yaml = "0.9"
